--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Capitales del Mundo - Juego Geográfico</title>
+    <title>Capitales y Paises del Mundo - Juego Geográfico</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
     <style>
@@ -595,7 +595,7 @@
                     <i class="fas fa-flag"></i>
                 </div>
                 <div class="mode-title">Por Bandera</div>
-                <div class="mode-description">Adivina la capital viendo solo la bandera</div>
+                <div class="mode-description">Adivina el pais solo viendo la bandera</div>
                 <div class="mode-difficulty">
                     <div class="difficulty-dot active"></div>
                     <div class="difficulty-dot active"></div>
